testsuite/poke.pkl/ne-arrays-diag-2.pk
/* { dg-do compile } */

var e = [1,2] != [[1],[2]]; /* { dg-error "invalid.*\n.*expected" } */
